# MobXStore

./: .envexample  .gitignore  pyproject.toml
accounts/: admin.py  hashers.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_address.py  0003_delete_address.py
addresses/: models.py  serializers.py  urls.py  views.py
addresses/migrations/: 0001_initial.py
cart/: admin.py  email_service.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_order_address_line_order_city_order_country_and_more.py
products/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
products/management/commands/: generate_fake_products.py
products/migrations/: 0001_initial.py
store_backend/: celery.py  settings.py  urls.py
wishlist/: models.py  serializers.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
